The integration tests memory limit has been increased.